@@ -1,5 +1,16 @@
 2008-09-20  Dan Bernstein  <mitz@apple.com>
 
+        Reviewed by Eric Seidel.
+
+        - fix https://bugs.webkit.org/show_bug.cgi?id=20950
+          Reproducible assertion failure running svg/custom/acid3-test-77.html multiple times under guard malloc
+
+        * svg/SVGTextContentElement.cpp:
+        (WebCore::SVGInlineTextBoxQueryWalker::chunkPortionCallback): Changed to
+        not include the first character in the extraCharsAvailable count.
+
+2008-09-20  Dan Bernstein  <mitz@apple.com>
+
         - Mac build fix
 
         * WebCore.xcodeproj/project.pbxproj: Made DashArray.h a private header.
